--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<nav></nav>
-		<header></header>
+		<header>I like this course</header>
 		<main></main>
 		<footer></footer>
 	</body>
