--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,9 @@
 	<body>
 		<nav></nav>
 		<header>I like this course</header>
-		<main></main>
+		<main>
+		<h1>My title</h1>
+		</main>
 		<footer></footer>
 	</body>
 </html>
